...
    },
    "account creation sign in button title": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Anmelden"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Sign In"
...
    },
    "account creation sign in library selection placeholder": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Bibliothek Auswählen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Select Library"
...
    },
    "account creation sign in password placeholder": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Passwort"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Password"
...
    },
    "account creation sign in username placeholder": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Bücherhallen-Karten Nummer"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Library Card Number"
...
    },
    "account creation success done button title": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Loslesen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Let's read"
...
    },
    "account detail delete button title": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Konto Löschen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete Account"
...
    },
    "account detail delete confirmed ok button title": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Löschen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete"
...
    "account list new account button accessibility": {
      "comment": "MARK: Account List -",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Konto hinzufügen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Add Account"
...
      "comment": "Title of the accounts view",
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Konten"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Accounts"
...
    "More": {
      "extractionState": "manual",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Mehr"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "More"
...
