...
    "Charges" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gebühren"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Charges"
...
    "Search" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Suche"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search"
...
      "comment" : "Accessibility of search",
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Katalog für die Suche auswählen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Set search catalogue"
...
