...

}

struct SettingsView_Previews: PreviewProvider {
    static var previews: some View {
        let libraries = AboutSectionLibraryList(libraries: [
            AboutSectionLibrary(name: "Bücherhallen Hamburg",
                                description: "Stiftung Hamburger Öffentliche Bücherhallen"),
            AboutSectionLibrary(name: "New York Public Library",
                                description: "The New York Public Library (NYPL)")
        ])

        return NavigationView {
...
