...

                Button(action: {
                    viewModel.toggleBookmark()
                }) {
                    Image(systemName: title)
                }
                .accessibilityIdentifier("bookmark/unbookmark")
            } else {
                ProgressView()
            }
        }
    }

...
